--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -20,8 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         base: ["ubuntu", "rhel"]
-        # TODO: Can we add a renovate config for these?
-        rke2_version: ["v1.28.11+rke2r1", "v1.29.6+rke2r1", "v1.30.2+rke2r1"]
+        rke2_version: ["v1.28.11+rke2r1", "v1.29.6+rke2r1", "v1.30.2+rke2r1"] # renovate: datasource=github-releases depName=rancher/rke2
         aws_env: ["commercial"]
     steps:
       - name: Checkout Code
