--- a/renovate.json
+++ b/renovate.json
@@ -11,9 +11,15 @@
   "packageRules": [
     { 
       "matchFileNames": [".github/**"],
+      "excludePackageNames": ["rancher/rke2"],
       "groupName": "githubactions",
       "commitMessageTopic": "githubactions",
       "pinDigests": true
+    },
+    {
+      "matchDatasources": ["github-releases"],
+      "matchPackageNames": ["rancher/rke2"],
+      "commitMessageTopic": "rke2"
     }
   ]
 }
