--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -20,16 +20,25 @@ jobs:
       fail-fast: false
       matrix:
         base: ["ubuntu", "rhel"]
-        aws_env: ["commercial"]
+        aws_env: ["commercial, govcloud"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
+      - name: Set AWS Variables
+        run: |
+          if [ "${{ matrix.aws_env }}" == "commercial" ]; then
+            echo "AWS_REGION=us-west-2" >> $GITHUB_ENV
+            echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
+          elif [ "${{ matrix.aws_env }}" == "govcloud" ]; then
+            echo "AWS_REGION=us-gov-west-1" >> $GITHUB_ENV
+            echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_GOVCLOUD_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
+          fi
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
         with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ env.AWS_ORG_ROLE_TO_ASSUME }}
           role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
+          aws-region: ${{ env.AWS_REGION }}
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
       - name: Setup UDS
