--- a/.github/workflows/publish-aws.yaml
+++ b/.github/workflows/publish-aws.yaml
@@ -51,17 +51,17 @@ jobs:
           tofu_wrapper: false
           tofu_version: 1.6.2
       - name: Publish ${{ matrix.base }} AMI
-        run: uds run --no-progress publish-ami-${{ matrix.base }}
+        run: uds run --no-progress publish-ami-${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }}
       - name: Test ${{ matrix.base }} AMI
         shell: bash -e -o pipefail {0}
         env:
           KUBECONFIG: "/home/runner/.kube/rke2-config"
-        run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ matrix.base }}
+        run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }}
       - name: Teardown test infrastructure
         shell: bash -e -o pipefail {0}
         if: always()
-        run: uds run --no-progress teardown-infra --set DISTRO=${{ matrix.base }}
+        run: uds run --no-progress teardown-infra --set DISTRO=${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }}
       - name: Cleanup ${{ matrix.base }} AMI on failure
         shell: bash -e -o pipefail {0}
         if: failure()
-        run: uds run --no-progress cleanup-ami
+        run: uds run --no-progress cleanup-ami --set AWS_REGION=${{ env.AWS_REGION }}
