--- a/renovate.json
+++ b/renovate.json
@@ -14,6 +14,22 @@
       "groupName": "githubactions",
       "commitMessageTopic": "githubactions",
       "pinDigests": true
+    },
+    {
+      "matchDatasources": ["github-releases"],
+      "matchPackageNames": ["rancher/rke2"],
+      "commitMessageTopic": "rke2",
+      "updateTypes": ["patch"]
+    }
+  ],
+  "regexManagers": [
+    {
+      "fileMatch": [".*\\.ya?ml$"],
+      "matchStrings": [
+        "(?<currentValue>v\\d+\\.\\d+\\.\\d\\+rke2r\\d+)"
+      ],
+      "depNameTemplate": "rancher/rke2",
+      "datasourceTemplate": "github-releases"
     }
   ]
 }
