--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -20,23 +20,32 @@ jobs:
       fail-fast: false
       matrix:
         base: ["ubuntu", "rhel"]
+        aws_env: ["commercial", "govcloud"]
         rke2_version: ["v1.28.11+rke2r1", "v1.29.6+rke2r1", "v1.30.2+rke2r1"]
-        aws_env: ["commercial"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
+      - name: Set AWS Variables
+        run: |
+          if [ "${{ matrix.aws_env }}" == "commercial" ]; then
+            echo "AWS_REGION=us-west-2" >> $GITHUB_ENV
+            echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
+          elif [ "${{ matrix.aws_env }}" == "govcloud" ]; then
+            echo "AWS_REGION=us-gov-west-1" >> $GITHUB_ENV
+            echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_GOVCLOUD_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
+          fi
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
         with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ env.AWS_ORG_ROLE_TO_ASSUME }}
           role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
+          aws-region: ${{ env.AWS_REGION }}
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
       - name: Setup UDS
         if: always()
         uses: defenseunicorns/uds-common/.github/actions/setup@a6fba9c0084319325d70816a3481aec0979649fa # v0.4.0
-      - name: Validate ${{ matrix.base }} AMI
-        run: uds run --no-progress validate-ami-${{ matrix.base }} --set RKE2_VERSION=${{ matrix.rke2_version }}
-      - name: Build ${{ matrix.base }} AMI
-        run: uds run --no-progress build-ami-${{ matrix.base }} --set RKE2_VERSION=${{ matrix.rke2_version }}
+      - name: Validate ${{ matrix.base }} ${{ matrix.aws_env }} AMI
+        run: uds run --no-progress validate-ami-${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }} --set RKE2_VERSION=${{ matrix.rke2_version }}
+      - name: Build ${{ matrix.base }} ${{ matrix.aws_env }} AMI
+        run: uds run --no-progress build-ami-${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }} --set RKE2_VERSION=${{ matrix.rke2_version }}
