--- a/.github/workflows/publish-aws.yaml
+++ b/.github/workflows/publish-aws.yaml
@@ -19,19 +19,29 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false # Ensure each matrix job will not be interrupted by the failure of another
       matrix:
         base: ["ubuntu", "rhel"]
+        aws_env: ["commercial", "govcloud"]
         rke2_version: ["v1.28.11+rke2r1", "v1.29.6+rke2r1", "v1.30.2+rke2r1"]
-        aws_env: ["commercial"]
     steps:
       - name: Checkout Code
         uses: actions/checkout@0ad4b8fadaa221de15dcec353f45205ec38ea70b # v4
+      - name: Set AWS Variables
+        run: |
+          if [ "${{ matrix.aws_env }}" == "commercial" ]; then
+            echo "AWS_REGION=us-west-2" >> $GITHUB_ENV
+            echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
+          elif [ "${{ matrix.aws_env }}" == "govcloud" ]; then
+            echo "AWS_REGION=us-gov-west-1" >> $GITHUB_ENV
+            echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_GOVCLOUD_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
+          fi
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
         with:
-          role-to-assume: ${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}
+          role-to-assume: ${{ env.AWS_ORG_ROLE_TO_ASSUME }}
           role-session-name: ${{ github.job || github.event.client_payload.pull_request.head.sha || github.sha }}
-          aws-region: us-west-2
+          aws-region: ${{ env.AWS_REGION }}
           # 21600 seconds == 6 hours
           role-duration-seconds: 21600
       - name: Setup UDS
@@ -43,17 +53,17 @@ jobs:
           tofu_wrapper: false
           tofu_version: 1.6.2
       - name: Publish ${{ matrix.base }} ${{ matrix.rke2_version }} AMI
-        run: uds run --no-progress publish-ami-${{ matrix.base }} --set RKE2_VERSION=${{ matrix.rke2_version }}
+        run: uds run --no-progress publish-ami-${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }} --set RKE2_VERSION=${{ matrix.rke2_version }}
       - name: Test ${{ matrix.base }} ${{ matrix.rke2_version }} AMI
         shell: bash -e -o pipefail {0}
         env:
           KUBECONFIG: "/home/runner/.kube/rke2-config"
-        run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ matrix.base }}
+        run: uds run --no-progress test-cluster --set SHA=${{ github.sha }} --set DISTRO=${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }}
       - name: Teardown test infrastructure
         shell: bash -e -o pipefail {0}
         if: always()
-        run: uds run --no-progress teardown-infra --set DISTRO=${{ matrix.base }}
+        run: uds run --no-progress teardown-infra --set DISTRO=${{ matrix.base }} --set AWS_REGION=${{ env.AWS_REGION }}
       - name: Cleanup ${{ matrix.base }} ${{ matrix.rke2_version }} AMI on failure
         shell: bash -e -o pipefail {0}
         if: failure()
-        run: uds run --no-progress cleanup-ami
+        run: uds run --no-progress cleanup-ami --set AWS_REGION=${{ env.AWS_REGION }}
