chore: add additional triggers to publish aws ami workflow

--- a/.github/workflows/on-pr-aws.yaml
+++ b/.github/workflows/on-pr-aws.yaml
@@ -8,6 +8,7 @@ on:
       - "packer/aws/**"
       - "packer/scripts/**"
       - ".github/workflows/on-pr-aws.yaml"
+      - "tasks/aws.yaml"
 
 permissions:
   id-token: write
