chore: commit suggestion
Co-authored-by: Charles Bushong <bushong1@gmail.com>

--- a/.github/workflows/publish-aws.yaml
+++ b/.github/workflows/publish-aws.yaml
@@ -35,13 +35,13 @@ jobs:
           if [ "${{ matrix.aws_env }}" == "commercial" ]; then
             echo "AWS_REGION=us-west-2" >> $GITHUB_ENV
             echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_COMMERCIAL_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
-            echo "AWS_OLD_CI_ACCOUNT_ID"=${{ secrets.AWS_OLD_COMMERCIAL_CI_ACCOUNT_ID }}" >> $GITHUB_ENV
-            echo "AWS_ORG_ARN"=${{ secrets.AWS_COMMERCIAL_ORG_ARN }}" >> $GITHUB_ENV
+            echo "AWS_OLD_CI_ACCOUNT_ID=${{ secrets.AWS_OLD_COMMERCIAL_CI_ACCOUNT_ID }}" >> $GITHUB_ENV
+            echo "AWS_ORG_ARN=${{ secrets.AWS_COMMERCIAL_ORG_ARN }}" >> $GITHUB_ENV
           elif [ "${{ matrix.aws_env }}" == "govcloud" ]; then
             echo "AWS_REGION=us-gov-west-1" >> $GITHUB_ENV
             echo "AWS_ORG_ROLE_TO_ASSUME=${{ secrets.AWS_GOVCLOUD_ORG_ROLE_TO_ASSUME }}" >> $GITHUB_ENV
-            echo "AWS_OLD_CI_ACCOUNT_ID"=${{ secrets.AWS_OLD_GOVCLOUD_CI_ACCOUNT_ID }}" >> $GITHUB_ENV
-            echo "AWS_ORG_ARN"=${{ secrets.AWS_GOVCLOUD_ORG_ARN }}" >> $GITHUB_ENV
+            echo "AWS_OLD_CI_ACCOUNT_ID=${{ secrets.AWS_OLD_GOVCLOUD_CI_ACCOUNT_ID }}" >> $GITHUB_ENV
+            echo "AWS_ORG_ARN=${{ secrets.AWS_GOVCLOUD_ORG_ARN }}" >> $GITHUB_ENV
           fi
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4
